--- a/src/style.css
+++ b/src/style.css
@@ -227,11 +227,11 @@ html, body, #root {
     width: calc(100% - 32px);
     left: 16px;
     bottom: 16px;
-    max-height: 46px;
+    max-height: 46px !important;
     transition: opacity 0.6s ease 0.3s, transform 0.6s ease 0.3s, max-height 0.4s cubic-bezier(0.33, 1, 0.68, 1);
   }
-  .sidebar--expanded {
-    max-height: 50vh;
+  .sidebar.sidebar--expanded {
+    max-height: 50vh !important;
   }
   .sidebar__header {
     cursor: pointer;
